// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchNode renders a patch with publishing disabled 1`] = `
Object {
  "children": <Collapsible
    expandedButtonClassName="mb-3"
    title={
      <div
        className="d-flex align-items-center m-1 ml-2"
      >
        <div
          className="changeset-node__content flex-fill"
        >
          <div
            className="d-flex flex-column"
          >
            <div>
              <Octicon
                className="icon-inline mr-2"
                icon={[Function]}
                size={16}
                verticalAlign="text-bottom"
              />
              <strong>
                <AnchorLink
                  className="text-muted"
                  rel="noopener noreferrer"
                  target="_blank"
                  to="github.com/sourcegraph/sourcegraph"
                >
                  sourcegraph
                </AnchorLink>
              </strong>
            </div>
          </div>
        </div>
        <div
          className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
        >
          <DiffStat
            added={100}
            changed={200}
            deleted={100}
            expandedCounts={true}
          />
        </div>
      </div>
    }
    titleClassName="changeset-node__content flex-fill"
    wholeTitleClickable={false}
  >
    <FileDiffConnection
      cursorPaging={true}
      defaultFirst={15}
      hideSearch={true}
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": undefined,
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      listClassName="list-group list-group-flush"
      location={
        Object {
          "hash": "",
          "key": undefined,
          "pathname": "/campaigns",
          "search": "",
          "state": undefined,
        }
      }
      noSummaryIfAllNodesVisible={true}
      nodeComponent={[Function]}
      nodeComponentProps={
        Object {
          "history": Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": undefined,
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": undefined,
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          },
          "isLightTheme": true,
          "lineNumbers": true,
          "location": Object {
            "hash": "",
            "key": undefined,
            "pathname": "/campaigns",
            "search": "",
            "state": undefined,
          },
          "persistLines": false,
        }
      }
      noun="changed file"
      pluralNoun="changed files"
      queryConnection={[Function]}
      useURLQuery={false}
    />
  </Collapsible>,
  "className": "list-group-item e2e-changeset-node",
}
`;

exports[`PatchNode renders a patch with publishing enabled 1`] = `
Object {
  "children": <Collapsible
    expandedButtonClassName="mb-3"
    title={
      <div
        className="d-flex align-items-center m-1 ml-2"
      >
        <div
          className="changeset-node__content flex-fill"
        >
          <div
            className="d-flex flex-column"
          >
            <div>
              <Octicon
                className="icon-inline mr-2"
                icon={[Function]}
                size={16}
                verticalAlign="text-bottom"
              />
              <strong>
                <AnchorLink
                  className="text-muted"
                  rel="noopener noreferrer"
                  target="_blank"
                  to="github.com/sourcegraph/sourcegraph"
                >
                  sourcegraph
                </AnchorLink>
              </strong>
            </div>
          </div>
        </div>
        <div
          className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
        >
          <DiffStat
            added={100}
            changed={200}
            deleted={100}
            expandedCounts={true}
          />
        </div>
        <React.Fragment>
          <button
            className="flex-shrink-0 flex-grow-0 btn btn-sm btn-secondary ml-2"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
             
            Publish
          </button>
        </React.Fragment>
      </div>
    }
    titleClassName="changeset-node__content flex-fill"
    wholeTitleClickable={false}
  >
    <FileDiffConnection
      cursorPaging={true}
      defaultFirst={15}
      hideSearch={true}
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": undefined,
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      listClassName="list-group list-group-flush"
      location={
        Object {
          "hash": "",
          "key": undefined,
          "pathname": "/campaigns",
          "search": "",
          "state": undefined,
        }
      }
      noSummaryIfAllNodesVisible={true}
      nodeComponent={[Function]}
      nodeComponentProps={
        Object {
          "history": Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": undefined,
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": undefined,
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          },
          "isLightTheme": true,
          "lineNumbers": true,
          "location": Object {
            "hash": "",
            "key": undefined,
            "pathname": "/campaigns",
            "search": "",
            "state": undefined,
          },
          "persistLines": false,
        }
      }
      noun="changed file"
      pluralNoun="changed files"
      queryConnection={[Function]}
      useURLQuery={false}
    />
  </Collapsible>,
  "className": "list-group-item e2e-changeset-node",
}
`;
